@@ -194,6 +194,8 @@ Optimizations
 
 * GITHUB#12078: Enhance XXXField#newRangeQuery. (Lu Xugang)
 
+* GITHUB#11857: Hunspell: improved suggestion performance (Peter Gromov)
+
 Other
 ---------------------
 
